'Notify' additional content

--- a/public/stylesheets/app-notify.css
+++ b/public/stylesheets/app-notify.css
@@ -1,24 +1,38 @@
-@font-face{
-    font-family:'titillium-reg';
-    src: url("/fonts/Titillium-Regular.otf");
-}
-
 * {
     /*box-sizing: border-box;*/
     margin: 0 auto;
-}
-
-h1{
-    font-weight: bold;
-    font-size: 250%;
-    margin-bottom: 0px;
-}
-
-h2{
-    font-size: 100%;
+    font-family: Roboto;
 }
 ul{
     padding: 0px;
+}
+
+.contact-link{
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    width: 1.5em;
+    height: 1.5em;
+    line-height: 1.5em;
+    border-radius: 100%;
+    background-color: #d4d4d4;
+    color: #ffffff;
+}
+.contact-link:hover{
+    background-color: #62d995;
+    cursor: pointer;
+}
+
+.footer-links{
+    display: inline-block;
+    color: #848484;
+}
+
+.section{
+    padding-top: 54px;
+    padding-bottom: 54px;
+    max-width: 1600px;
+    width: 80%;
 }
 
 .uppercase {
@@ -28,310 +42,38 @@ ul{
 /*.clearfix{*/
 /*    overflow: auto;*/
 /*}*/
-.cuda-page {
-    padding-top: 118px;
-    padding-bottom: 108px;
-    /*outline: 1px dotted black;*/
-}
-.cuda-page h2 {
-    margin-top: 0px;
-}
-.link-box{
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 1.13em;
-    padding-top: 1.13em;
-    padding-bottom: 1.13em;
-    width: 290px;
-    border-radius: 5px;
-    font-size: 1.13em;
-    font-weight: bold;
-    background-color: #add4cd;
-    color: rgb(53, 45, 47);
-}
-.link-box:hover{
-    background-color: #0a5d4e;
-    cursor:pointer;
-}
-.list-other-sites{
-    list-style-type: none;
-    display: inline-block;
-    width: 134px;
-    /*outline: 1px dashed black;*/
-}
-.list-other-sites:hover{
-    color:#30bae7;
-    cursor:pointer;
-}
-.list-projects{
-    list-style-type: none;
-    display: inline-block;
-    width: 440px;
-    margin-top: 60px;
-    margin-left: 10px;
-    margin-right: 10px;
-    /*outline: 1px dashed black;*/
-}
-.list-projects div{
-    margin-top: 20px;
-    font-weight: bold;
-}
-.list-projects img{
-    max-width: 100%;
-}
 
-.list-services{
-    list-style-type: none;
-    display: inline-block;
-    width: 260px;
-    margin-top: 60px;
-    margin-right: 10px;
-    /*outline: 1px dashed black;*/
-}
-.list-services-title{
-    margin-top: 54px;
-    font-weight: bold;
-    font-size: 1.5em;
-}
-.list-services-description{
-    margin-top: 27px;
-    margin-left: 18px;
-    margin-right: 18px;
-    font-size: 1em;
-}
-.list-skills{
-    list-style-type: none;
-    display: inline-block;
-    width: 260px;
-    margin-top: 60px;
-    margin-right: 10px;
-    /*outline: 1px dashed black;*/
-}
-.list-skills > img {
-    margin-bottom: 28px;
-}
-.list-skills > div {
-    font-size: 1.5em;
-    font-weight: bold;
-}
-.list-team{
-    list-style-type: none;
-    display: inline-block;
-    width: 260px;
-    margin-top: 60px;
-    margin-right: 5px;
-    margin-left: 5px;
-    /*outline: 1px dashed black;*/
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.list-team div{
-    font-size: 100%;
-}
-.list-team img{
-    max-width: 80%;
-    border-radius: 100%;
-}
-.list-team .list-team-name{
-    margin-top: 20px;
-    font-size: 1.5em;
-}
-.list-team .list-team-title{
-    font-size: 1em;
-    color: #30bae7;
-}
-.list-team div:nth-child(4){
-    margin-top: 10px;
-}
-.list-team div:nth-child(5){
-    margin-top: 10px;
-}
-.list-team-contact{
-    list-style-type: none;
-    /*display: inline;*/
-    display: inline-block;
-    margin-top: 22px;
-    /*border-radius: 100%;*/
-}
-.list-team-contact .contact-icon{
-    /*display: inline-block;*/
-    background-color: #bdd1df;
-    width: 1.5em;
-    height: 1.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
-    color: #ffffff;
-    border-radius: 100%;
-}
-.list-team-contact .contact-icon:hover{
-    background-color: #758189;
-    cursor: pointer;
-}
-.list-testimonials{
-    list-style-type: none;
-    display: inline-block;
-    float: left;
-    text-align: left;
-    width: 550px;
-    height: 120px;
-    margin-top: 60px;
-    /*margin-left: 10px;*/
-    /*margin-right: 20px;*/
-    padding-left: 10px;
-    padding-right: 10px;
-    /*outline: 1px dashed black;*/
-}
-.list-testimonials img{
-    /*display: block;*/
-    float: left;
-    margin-right: 20px;
-    max-width: 20%;
-    border-radius: 100%;
-}
-.message-substance{
-    margin-top: 10px;
-}
-.message-substance:nth-child(1){
-    margin-top: 60px;
-    margin-right: 7px;
-    width: 49%;
-}
-.message-substance:nth-child(2){
-    width: 49%;
-}
-.message-substance:nth-child(3){
-    max-width: 100%;
-    height: 10em;
-}
-
-.nav-list:hover{
-    background-color:#4d2f5c;
-    cursor:pointer;
-}
-.nav-list{
-    display: inline-block;
-    text-align: center;
-    color: #ffffff;
-    width: 80px;
-    border-radius: 5px;
-    padding: 2px;
-    font-weight: bold;
-}
-.nav-list:hover{
-    background-color:#4d2f5c;
-    cursor:pointer;
-}
-.portfolio-list{
-    display: inline-block;
-    text-align: center;
-    background-color: #ebc985;
-    color: #393939;
-    width: 80px;
-    border-radius: 5px;
-    padding: 2px;
-    font-weight: bold;
-}
-.portfolio-list:hover{
-    background-color:#998356;
-    cursor:pointer;
-}
-.quote-name{
-    display: block;
-}
-.quote-text{
-    display: block;
-    max-width: 360px;
-}
-.quote-title{
-    display: block;
-}
-.title-line{
-    margin-top: 22px;
-    margin-bottom: 22px;
-}
-
-.view-panel{
-    text-align: center;
-    max-width: 1100px;
-    /*outline: 1px solid black;*/
-}
-
-#cuda-welcome{
-    padding-top: 58px;
-    background-color: #87509C;
-    color: #ffffff;
-}
-#cuda-welcome .link-box{
-    margin-top: 54px;
-    background-color: #eb7d4b;
-    color: #ffffff;
-}
-#cuda-welcome .link-box:hover{
-    background-color: #bf673f;
-    cursor: pointer;
-}
-
-#cuda-services{
-    background-color: #17c2a4;
-    color: #ffffff;
-}
-
-#cuda-team{
-    background-color: #e7f1f8;
-    color: #3c4761;
-}
-
-#cuda-skills{
+#notify-contact{
     background-color: #ffffff;
-    color: #3c4761;
+    text-align: center;
+}
+#notify-footer{
+    background-color: #e3e3e3;
+    text-align: center;
+}
+#notify-header{
 }
 
-#cuda-portfolio{
-    background-color: #ffdd99;
-    color: #393939;
-}
-#cuda-portfolio .link-box{
-    margin-top: 40px;
-    background-color: #17c2a4;
-    color: #ffffff;
-}
-#cuda-portfolio .link-box:hover{
-    background-color: #138c77;
-    cursor: pointer;
+#notify-header img{
+    position: relative;
 }
 
-#cuda-testimonials{
-    background-color: #d74680;
-    color: #ffffff;
+#notify-header .image-inner{
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-#cuda-in-touch{
-    background-color: #3c5499;
-    color: #ffffff;
-}
-#cuda-in-touch .link-box{
-    margin-top: 40px;
-    background-color: #30bae7;
-    color: #ffffff;
-}
-#cuda-in-touch .link-box:hover{
-    background-color: #196179;
-    /*outline: 1px dashed #299ec5;*/
-    cursor: pointer;
+#notify-updates{
+    background-color: #e3e3e3;
 }
 
-#cuda-in-touch .message-substance{
-    padding: 1em;
-    background-color: #273a71;
-    color: #ffffff;
-    border-radius: 5px;
-    border: 0px;
-    font-weight: bold;
+#notify-features{
+    background-color: #ffffff;
+    text-align: center;
 }
 
-#cuda-other-sites{
-    padding-top: 48px;
-    padding-bottom: 48px;
-    background-color: #344b8e;
-    color: #ffffff;
+#notify-testimonials{
+    background-color: #ffffff;
+    text-align: center;
 }
