--- a/views/pages/site-notify.ejs
+++ b/views/pages/site-notify.ejs
@@ -4,60 +4,79 @@
 <head>
     <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/stylesheets/app-notify.css">
     <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
 </head>
 
-<title>VBB - Cuda</title>
+<title>VBB - Notify</title>
 
 <body>
     <header>
     </header>
 
     <div id="notify-header">
-        <div>
-            A great new free psd theme to showcase your new application.
-            <br> OSx Droid Win
-        </div>
+            <!--<img src='/images/site-notify/header-main.png' alt="phone-pic error">-->
+            <div class="image-inner">
+                <div class="section">
+                    <div>Notify</div>
+                    <div>
+                        A great new free psd theme to showcase your new application.
+                        <br> OSx Droid Win
+                    </div>
+                </div>
+            </div>
     </div>
     <div id="notify-features">
-        <div>
-            Editable Theme Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
-        </div>
-        <div>
-            Flat Design Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
-        </div>
-        <div>
-            Reach Your Audience Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+        <div class="section">
+            <div>
+                Editable Theme Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+            </div>
+            <div>
+                Flat Design Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+            </div>
+            <div>
+                Reach Your Audience Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+            </div>
         </div>
     </div>
-    <div id="notify-get-notified">
-        Get notified of any updates! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis
-        ornare luctus id sollicitudin ante lobortis at.
+    <div id="notify-updates">
+        <div class="section">
+            Get notified of any updates! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis
+            ornare luctus id sollicitudin ante lobortis at.
+        </div>
     </div>
     <div id="notify-testimonials">
-        Section
+        <div class="section">
+            “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”
+        </div>
     </div>
     <div id="notify-contact">
-        Say Hi & Get in Touch
-        <div><i class="fa fa-twitter"></i></div>
-        <div><i class="fa fa-twitter"></i></div>
-        <div><i class="fa fa-twitter"></i></div>
-        <div><i class="fa fa-twitter"></i></div>
-        <div><i class="fa fa-twitter"></i></div>
-        <div><i class="fa fa-twitter"></i></div>
+        <div class="section">
+            Say Hi & Get in Touch
+            <div>
+                <a class="contact-link" href="#"><i class="fa fa-twitter"></i></a>
+                <a class="contact-link" href="#"><i class="fa fa-facebook"></i></a>
+                <a class="contact-link" href="#"><i class="fa fa-pinterest"></i></a>
+                <a class="contact-link" href="#"><i class="fa fa-google-plus"></i></a>
+                <a class="contact-link" href="#"><i class="fa fa-linkedin"></i></a>
+                <a class="contact-link" href="#"><i class="fa fa-youtube"></i></a>
+            </div>
+        </div>
     </div>
 
     <footer>
         <div id="notify-footer">
-            <ul>
-                <li>Contact</li>
-                <li>Download</li>
-                <li>Press</li>
-                <li>Emali</li>
-                <li>Support</li>
-                <li>Privacy Policy</li>
-            </ul>
+            <div class="section">
+                <div>
+                    <a class="footer-links" href="#">Contact</a>
+                    <a class="footer-links" href="#">Download</a>
+                    <a class="footer-links" href="#">Press</a>
+                    <a class="footer-links" href="#">Email</a>
+                    <a class="footer-links" href="#">Support</a>
+                    <a class="footer-links" href="#">Privacy Policy</a>
+                </div>
+            </div>
         </div>
     </footer>
 
