--- a/views/pages/site-notify.ejs
+++ b/views/pages/site-notify.ejs
@@ -16,13 +16,17 @@
     </header>
 
     <div id="notify-header">
-            <!--<img src='/images/site-notify/header-main.png' alt="phone-pic error">-->
+            <img src='/images/site-notify/header-main.png' alt="phone-pic error">
             <div class="image-inner">
                 <div class="section">
                     <div>Notify</div>
                     <div>
                         A great new free psd theme to showcase your new application.
-                        <br> OSx Droid Win
+                        <div>
+                            <a class="header-link" href="#"><i class="fa fa-apple"></i></a>
+                            <a class="header-link" href="#"><i class="fa fa-android"></i></a>
+                            <a class="header-link" href="#"><i class="fa fa-windows"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -48,7 +52,14 @@
     </div>
     <div id="notify-testimonials">
         <div class="section">
-            “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”
+            <div class="testimonial-review">
+                <div>
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”    
+                </div>
+                <div>
+                    Jane Hunt
+                </div>
+            </div>
         </div>
     </div>
     <div id="notify-contact">
