'Notify' additional content

--- a/views/pages/site-notify.ejs
+++ b/views/pages/site-notify.ejs
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
 </head>
 
-<title>VBB - Notify</title>
+<title>vanillaBeanBag | Notify</title>
 
 <body>
     <header>
@@ -33,14 +33,20 @@
     </div>
     <div id="notify-features">
         <div class="section">
-            <div>
-                Editable Theme Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+            <div class="feature-list-item">
+                <div class="feature-list-icon"><i class="fa fa-gear"></i></div>
+                <div>Editable Theme</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
-            <div>
-                Flat Design Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+            <div class="feature-list-item">
+                <div class="feature-list-icon"><i class="fa fa-star"></i></div>
+                <div>Flat Design</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
-            <div>
-                Reach Your Audience Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.
+            <div class="feature-list-item">
+                <div class="feature-list-icon"><i class="fa fa-globe"></i></div>
+                <div>Reach Your Audience</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
         </div>
     </div>
@@ -59,12 +65,26 @@
                 <div>
                     Jane Hunt
                 </div>
+                <div class="testimonial-pics">
+                    <img src="/images/site-notify/testimonial-p0.png">
+                    <img src="/images/site-notify/testimonial-p1.png">
+                    <img src="/images/site-notify/testimonial-p2.png">
+                    <img src="/images/site-notify/testimonial-p3.png">
+                    <img src="/images/site-notify/testimonial-p4.png">
+                    <img src="/images/site-notify/testimonial-p5.png">
+                    <img src="/images/site-notify/testimonial-p6.png">
+                </div>
             </div>
         </div>
     </div>
     <div id="notify-contact">
         <div class="section">
-            Say Hi & Get in Touch
+            <div>
+                Say Hi & Get in Touch    
+            </div>
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse.
+            </div>
             <div>
                 <a class="contact-link" href="#"><i class="fa fa-twitter"></i></a>
                 <a class="contact-link" href="#"><i class="fa fa-facebook"></i></a>
