--- a/public/stylesheets/app-notify.css
+++ b/public/stylesheets/app-notify.css
@@ -11,9 +11,10 @@ ul{
     display: inline-block;
     text-align: center;
     vertical-align: middle;
-    width: 1.5em;
-    height: 1.5em;
-    line-height: 1.5em;
+    font-size: 1.8em;
+    width: 1.6em;
+    height: 1.6em;
+    line-height: 1.62em;
     border-radius: 100%;
     background-color: #d4d4d4;
     color: #ffffff;
@@ -22,7 +23,29 @@ ul{
     background-color: #62d995;
     cursor: pointer;
 }
-
+.feature-list-icon{
+    text-align: center;
+    vertical-align: middle;
+    font-size: 325%;
+    width: 1.5em;
+    height: 1.5em;
+    line-height: 1.54em;
+    border-radius: 100%;
+    background-color: #62d995;
+    color: #ffffff;
+}
+.feature-list-item{
+    display: inline-block;
+    width: 30%;
+}
+.feature-list-item div:nth-child(2){
+    margin-top: 1em;
+    font-weight: bold;
+}
+.feature-list-item div:nth-child(3){
+    margin-top: 1em;
+    color: #848484;
+}
 .footer-links{
     display: inline-block;
     margin-left: 1em;
@@ -54,6 +77,9 @@ ul{
     max-width: 1600px;
     width: 80%;
 }
+.testimonial-pics img{
+    display: inline-block;
+}
 .testimonial-review{
     font-style: italic;
     width: 66%;
@@ -72,15 +98,27 @@ ul{
     background-color: #ffffff;
     text-align: center;
 }
+#notify-contact .section div:nth-child(1){
+    font-weight: bold;
+}
+#notify-contact .section div:nth-child(2){
+    margin-top: 1em;
+    color: #848484;
+}
+#notify-contact .section div:nth-child(3){
+    margin-top: 1em;
+}
 #notify-footer{
     background-color: #e3e3e3;
     text-align: center;
 }
 #notify-header{
+    color: #ffffff;
 }
 
 #notify-header img{
     position: relative;
+    width: 100%;
 }
 
 #notify-header .image-inner{
@@ -101,4 +139,7 @@ ul{
 #notify-testimonials{
     background-color: #ffffff;
     text-align: center;
+}
+#notify-testimonials .section{
+    padding-bottom: 0px;
 }
