--- a/views/pages/site-notify.ejs
+++ b/views/pages/site-notify.ejs
@@ -15,21 +15,18 @@
     <header>
     </header>
 
-    <div id="notify-header">
-            <img src='/images/site-notify/header-main.png' alt="phone-pic error">
-            <div class="image-inner">
-                <div class="section">
-                    <div>Notify</div>
-                    <div>
-                        A great new free psd theme to showcase your new application.
-                        <div>
-                            <a class="header-link" href="#"><i class="fa fa-apple"></i></a>
-                            <a class="header-link" href="#"><i class="fa fa-android"></i></a>
-                            <a class="header-link" href="#"><i class="fa fa-windows"></i></a>
-                        </div>
-                    </div>
+    <div id="notify-header" style="background-image:url(/images/site-notify/header-main.png);">
+        <div class="section">
+            <div>Notify</div>
+            <div>
+                A great new free psd theme to showcase your new application.
+                <div>
+                    <a class="header-link" href="#"><i class="fa fa-apple"></i></a>
+                    <a class="header-link" href="#"><i class="fa fa-android"></i></a>
+                    <a class="header-link" href="#"><i class="fa fa-windows"></i></a>
                 </div>
             </div>
+        </div>
     </div>
     <div id="notify-features">
         <div class="section">
@@ -60,7 +57,7 @@
         <div class="section">
             <div class="testimonial-review">
                 <div>
-                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”    
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”
                 </div>
                 <div>
                     Jane Hunt
@@ -80,7 +77,7 @@
     <div id="notify-contact">
         <div class="section">
             <div>
-                Say Hi & Get in Touch    
+                Say Hi & Get in Touch
             </div>
             <div>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse.
