'Notify' fixed features columns

--- a/views/pages/site-notify.ejs
+++ b/views/pages/site-notify.ejs
@@ -29,18 +29,18 @@
         </div>
     </div>
     <div id="notify-features">
-        <div class="section">
-            <div class="feature-list-item">
+        <div class="row features section">
+            <div class="col-sm-4 feature">
                 <div class="feature-list-icon"><i class="fa fa-gear"></i></div>
                 <div>Editable Theme</div>
                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
-            <div class="feature-list-item">
+            <div class="col-sm-4 feature">
                 <div class="feature-list-icon"><i class="fa fa-star"></i></div>
                 <div>Flat Design</div>
                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
-            <div class="feature-list-item">
+            <div class="col-sm-4 feature">
                 <div class="feature-list-icon"><i class="fa fa-globe"></i></div>
                 <div>Reach Your Audience</div>
                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
