--- a/public/stylesheets/app-notify.css
+++ b/public/stylesheets/app-notify.css
@@ -1,5 +1,5 @@
 * {
-    /*box-sizing: border-box;*/
+    box-sizing: border-box;
     margin: 0 auto;
     font-family: Roboto, Arial, sans-serif;
 }
@@ -23,6 +23,17 @@ ul{
     background-color: #62d995;
     cursor: pointer;
 }
+.feature{
+    /*overflow: auto;*/
+}
+.feature div:nth-child(2){
+    margin-top: 1em;
+    font-weight: bold;
+}
+.feature div:nth-child(3){
+    margin-top: 1em;
+    color: #848484;
+}
 .feature-list-icon{
     text-align: center;
     vertical-align: middle;
@@ -34,17 +45,11 @@ ul{
     background-color: #62d995;
     color: #ffffff;
 }
-.feature-list-item{
-    display: inline-block;
-    width: 30%;
+.features{
+    overflow: auto;
 }
-.feature-list-item div:nth-child(2){
-    margin-top: 1em;
-    font-weight: bold;
-}
-.feature-list-item div:nth-child(3){
-    margin-top: 1em;
-    color: #848484;
+.features .feature:not(:last-child) {
+    border-right: 1px solid rgba(55, 55, 55, .25);
 }
 .footer-links{
     display: inline-block;
@@ -137,3 +142,17 @@ ul{
 #notify-testimonials .section{
     padding-bottom: 0px;
 }
+
+.col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12{float:left;}
+.col-sm-12{width:100%;}
+.col-sm-11{width:91.66666667%;}
+.col-sm-10{width:83.33333333%;}
+.col-sm-9{width:75%;}
+.col-sm-8{width:66.66666667%;}
+.col-sm-7{width:58.33333333%;}
+.col-sm-6{width:50%;}
+.col-sm-5{width:41.66666667%;}
+.col-sm-4{width:33.33333333%;}
+.col-sm-3{width:25%;}
+.col-sm-2{width:16.66666667%;}
+.col-sm-1{width:8.33333333%;}
