--- a/views/pages/site-notify.ejs
+++ b/views/pages/site-notify.ejs
@@ -17,10 +17,10 @@
 
     <div id="notify-header" style="background-image:url(/images/site-notify/header-main.png);">
         <div class="section">
-            <div>Notify</div>
-            <div>
+            <div class="header-title">Notify</div>
+            <div class="col-sm-6">
                 A great new free psd theme to showcase your new application.
-                <div>
+                <div class="header-links">
                     <a class="header-link" href="#"><i class="fa fa-apple"></i></a>
                     <a class="header-link" href="#"><i class="fa fa-android"></i></a>
                     <a class="header-link" href="#"><i class="fa fa-windows"></i></a>
@@ -32,25 +32,43 @@
         <div class="row features section">
             <div class="col-sm-4 feature">
                 <div class="feature-list-icon"><i class="fa fa-gear"></i></div>
-                <div>Editable Theme</div>
+                <div class="section-heading">Editable Theme</div>
                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
             <div class="col-sm-4 feature">
                 <div class="feature-list-icon"><i class="fa fa-star"></i></div>
-                <div>Flat Design</div>
+                <div class="section-heading">Flat Design</div>
                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
             <div class="col-sm-4 feature">
                 <div class="feature-list-icon"><i class="fa fa-globe"></i></div>
-                <div>Reach Your Audience</div>
+                <div class="section-heading">Reach Your Audience</div>
                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla.</div>
             </div>
         </div>
     </div>
-    <div id="notify-updates">
+    <div id="notify-updates" class="clearfix">
         <div class="section">
-            Get notified of any updates! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis
-            ornare luctus id sollicitudin ante lobortis at.
+            <div class="col-sm-6">
+                <div class="updates-list-item">
+                    <div class="section-heading">
+                    Get notified of any updates!    
+                    </div>
+                    <div>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis
+                    ornare luctus id sollicitudin ante lobortis at.                
+                    </div>
+                    <form class="updates-email">
+                        <input type="text" name="notify-name" placeholder="Email Address" style="color:#c6c6c6;background-color:#ffffff; width:70%; padding: 10px; border:0px;">
+                        <input type="submit" style="color:#ffffff; background-color:#2ecc71; width:29%; padding: 10px; text-align:center;" value="Notify">
+                    </form>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="updates-list-item">
+                    <img src="/images/site-notify/notify-seat.png">
+                </div>
+            </div>
         </div>
     </div>
     <div id="notify-testimonials">
@@ -76,7 +94,7 @@
     </div>
     <div id="notify-contact">
         <div class="section">
-            <div>
+            <div class="section-heading">
                 Say Hi & Get in Touch
             </div>
             <div>
