--- a/views/pages/site-notify.ejs
+++ b/views/pages/site-notify.ejs
@@ -54,7 +54,7 @@
                     <div class="section-heading">
                     Get notified of any updates!    
                     </div>
-                    <div>
+                    <div class="section-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis
                     ornare luctus id sollicitudin ante lobortis at.                
                     </div>
