'GreenDesign ' site, first commit

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" ng-app>
+<!DOCTYPE html>green-des<Green Design lang="en" ng-app>
 
 <head>
     <% include partials/head.ejs %>
@@ -21,6 +20,7 @@
             <a href='/sage'>Sage</a><br>
             <a href='/cuda'>Cuda</a><br>
             <a href='/notify'>Notify</a><br>
+            <a href='/green-des'>Green Design</a><br>
         </div>
     </div>
 
