--- a/public/stylesheets/site-green-design.css
+++ b/public/stylesheets/site-green-design.css
@@ -3,17 +3,52 @@
     margin: 0 auto;
     font-family: "Poiret One", Arial, sans-serif;
 }
+body{
+    font-size: 1.2em;
+}
 ul{
     padding: 0px;
 }
 header{
-    width: 75%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #151515;
+    vertical-align: middle;
 }
 .clearfix{
     overflow: auto;
 }
 a.link-section{
     text-decoration: none;
+    color: #FFFFFF;
+    text-transform: capitalize;
+}
+.header-content{
+    width: 75%;
+    color: #51b105;
+}
+.header-content *{ 
+    display: inline-block;
+}
+.header-links{
+    float: right;
+    color: #51b105;
+}
+.header-title{
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 1.5em;
+}
+.link-clicker{
+    display: inline-block;
+    margin-top: 40px;
+    padding: 10px;
+    color: #FFFFFF;
+    background-color: #51b105;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
 }
 .link-section:not(:first-child){
     padding-left:1px;
@@ -22,9 +57,32 @@ a.link-section{
     padding-right:10px;
 }
 .section{
-    width:75%;
+    overflow: auto;
     padding-top: 50px;
     padding-bottom: 50px;
+}
+.section-content{
+    width:75%;
+}
+.serv-col{
+    text-align: center;
+    color: #8c8b8b;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.serv-col img{
+    width: 100%;
+    height: auto;
+}
+.serv-col div:nth-child(2){
+    margin-top: 1em;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+.serv-col div:nth-child(3){
+    margin-top: 1em;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 
@@ -41,3 +99,11 @@ a.link-section{
 .col-sm-3{width:25%;}
 .col-sm-2{width:16.66666667%;}
 .col-sm-1{width:8.33333333%;}
+
+
+#section-1{
+    background-image: url("/images/site-green-design/background.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0px -80px;
+}
