--- a/views/pages/site-green-design.ejs
+++ b/views/pages/site-green-design.ejs
@@ -14,34 +14,41 @@
 
 <body>
     <header>
-        <img src="/images/site-green-design/leaf.png">
-        <div>GreenDesign</div>
-        <a class="link-section" href="#">home</a>/
-        <a class="link-section" href="#">about</a>/
-        <a class="link-section" href="#">portfolio</a>/
-        <a class="link-section" href="#">clients</a>/
-        <a class="link-section" href="#">contact</a>
+        <div class="header-content">
+            <img src="/images/site-green-design/leaf.png">
+            <div class="header-title"><span style="font-weight: bold;">Green</span>Design</div>
+            <div class="header-links">
+                <a class="link-section" href="#">home</a>/
+                <a class="link-section" href="#">about</a>/
+                <a class="link-section" href="#">portfolio</a>/
+                <a class="link-section" href="#">clients</a>/
+                <a class="link-section" href="#">contact</a>    
+            </div>
+        </div>
     </header>
 
-    <div class="section">
+    <div class="section" id="section-1">
         <div class="section-content">
             <div>We know web design</div>
             <div>With over 15 years experience you can be sure your website is in safe hands</div>
-            <div>view our work</div>
+            <a class="link-clicker">view our work</a>
         </div>
     </div>
 
     <div class="section">
         <div class="section-content">
-            <div class="col-sm-4">
+            <div class="col-sm-4 serv-col">
+                <img src="/images/site-green-design/serv-design-sm.png">
                 <div>Web Design</div>
                 <div>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et laboribusam endi rerum as minullorent officiatum non cuscium quuntem</div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 serv-col">
+                <img src="/images/site-green-design/serv-ecommerce-sm.png">
                 <div>E-commerce</div>
                 <div>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et laboribusam endi rerum as minullorent officiatum non cuscium quuntem</div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 serv-col">
+                <img src="/images/site-green-design/serv-seo-sm.png">
                 <div>SEO</div>
                 <div>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et laboribusam endi rerum as minullorent officiatum non cuscium quuntem</div>
             </div>
