--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,11 @@
-<!DOCTYPE html>green-des<Green Design lang="en" ng-app>
+<!DOCTYPE html><lang="en" ng-app>
 
 <head>
     <% include partials/head.ejs %>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 </head>
 
-<title>VanillaBeanBag - Home</title>
+<title>vanillaBeanBag | Home</title>
 
 <body>
     <header>
@@ -20,7 +20,7 @@
             <a href='/sage'>Sage</a><br>
             <a href='/cuda'>Cuda</a><br>
             <a href='/notify'>Notify</a><br>
-            <a href='/green-des'>Green Design</a><br>
+            <a href='/green-design'>Green Design</a><br>
         </div>
     </div>
 
