--- a/views/pages/site-green-design.ejs
+++ b/views/pages/site-green-design.ejs
@@ -7,7 +7,8 @@
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>-->
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/stylesheets/site-green-design.css">
-    <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
+    <!--<link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">-->
+    <link rel="icon" type="image/png" href="/images/site-green-design/leaf.png" sizes="32x32">
 </head>
 
 <title>vanillaBeanBag | Green Design</title>
@@ -29,9 +30,9 @@
 
     <div class="section" id="section-1">
         <div class="section-content">
-            <div>We know web design</div>
-            <div>With over 15 years experience you can be sure your website is in safe hands</div>
-            <a class="link-clicker">view our work</a>
+            <div class="main-title">We know web design</div>
+            <div class="main-subtitle">With over 15 years experience you can be sure your website is in safe hands</div>
+            <a class="link-clicker" href="#">view our work</a>
         </div>
     </div>
 
@@ -55,16 +56,34 @@
         </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="client-fdbk">
         <div class="section-content">
-            <div>What our clients say</div>
-            <div>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et l</div>
+            <div>
+                <div class="section-grn-header">What our clients say</div>
+            </div>
+            <div class="client-testimonial">
+                <img src="/images/site-green-design/client-profile.png">
+                <div>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et l</div>
+            </div>
         </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="contact-info">
         <div class="section-content">
-            <div>Drop us a line</div>
+            <div>
+                <div class="section-grn-header">Drop us a line</div>
+            </div>
+                <div class="col-sm-6">
+                    <div>Phone</div>
+                    <div>Email</div>
+                    <div>Address</div>
+                </div>
+                <div class="col-sm-6">
+                    <img src="/images/site-green-design/contact-location.png">
+                </div>
+                <div>
+                    FB, TW, Pin, Link
+                </div>
         </div>
     </div>
 
