--- a/views/pages/site-green-design.ejs
+++ b/views/pages/site-green-design.ejs
@@ -82,7 +82,18 @@
                     <img src="/images/site-green-design/contact-location.png">
                 </div>
                 <div>
-                    FB, TW, Pin, Link
+                    <a class="footer-link-icon" href="https://facebook.com" target="_blank">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a class="footer-link-icon" href="https://twitter.com" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a class="footer-link-icon" href="https://pinterest.com" target="_blank">
+                        <i class="fa fa-pinterest"></i>
+                    </a>
+                    <a class="footer-link-icon" href="https://linkedin.com" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
                 </div>
         </div>
     </div>
