'Lorem Media' additional site, most content initial commit

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,6 +21,7 @@
             <a href='/cuda'>Cuda</a><br>
             <a href='/notify'>Notify</a><br>
             <a href='/green-design'>Green Design</a><br>
+            <a href='/lipsum-media'>Lipsum Media</a><br>
         </div>
     </div>
 
